--- a/exercise_files/Ch01/01_02e/tsconfig.json
+++ b/exercise_files/Ch01/01_02e/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "outDir": "build",
         "target": "esnext",
-        "noEmit": true
+        "noEmit": false,
     },
     "include": ["src/**/*"]
 }
